Added a new section to display cities

--- a/index.html
+++ b/index.html
@@ -35,10 +35,44 @@
                     MAP
                 </div>
 
-                <div class="content">
-                    <p>
-                        1 + 1 = 2
-                    </p>
+                <div class="content info-box">
+                    <div class="city">
+                        city
+                    </div>
+                    <div class="city">
+                        city
+                    </div>
+                    <div class="city">
+                        city
+                    </div>
+                    <div class="city">
+                        city
+                    </div>
+                    <div class="city">
+                        city
+                    </div>
+                    <div class="city">
+                        city
+                    </div>
+                    <div class="city">
+                        city
+                    </div>
+                    <div class="city">
+                        city
+                    </div>
+                    <div class="city">
+                        city
+                    </div>
+                    <div class="city">
+                        city
+                    </div>
+                    <div class="city">
+                        city
+                    </div>
+                    <div class="city">
+                        city
+                    </div>
+                    
                 </div>
             </div>
             <div class="side-content">
